@@ -467,7 +467,7 @@ text-align: center;
 position: relative;
 }
 
-.active-scaffold .message {
+.active-scaffold .message, .active-scaffold-component .message {
 font-size: 11px;
 font-weight: bold;
 padding: 5px 20px 5px 5px;
@@ -497,11 +497,11 @@ font: bold 11px verdana, sans-serif;
 letter-spacing: -1px;
 }
 
-.active-scaffold .messages-container .message {
+.active-scaffold .messages-container .message, .active-scaffold-component .message {
 margin: 0;
 }
 
-.active-scaffold .error-message {
+.active-scaffold .error-message, .active-scaffold-component .error-message {
 border-left: solid 5px;
 }
 
