@@ -116,7 +116,11 @@ module ActiveScaffold #:nodoc:
           # might be a namespaced controller (e.g., 'admin/admins')
           model = remote_controller.to_s.sub(%r{.*/}, '').singularize
           content_tag(:div, :class => 'active-scaffold-header') do
-            content_tag :h2, link_to(options[:label] || active_scaffold_config_for(model).list.label, url, :remote => true, :class => 'load-embedded')
+            content_tag(:h2) do
+              link_label = options[:label] || active_scaffold_config_for(model).list.label
+              link_to(link_label, url, remote: true, class: 'load-embedded', data: {error_msg: as_(:error_500)}) <<
+                loading_indicator_tag(url_options)
+            end
           end
         end
       end
